--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna Recipe</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna Recipe</a></li>
+        <li><a href="./recipes/potato_soup.html" target="_blank" rel="noopener noreferrer">Potato Soup Recipe</a></li>
+    </ul>
 </body>
 </html>
