--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna Recipe</a></li>
         <li><a href="./recipes/potato_soup.html" target="_blank" rel="noopener noreferrer">Potato Soup Recipe</a></li>
+        <li><a href="./recipes/chili.html" target="_blank" rel="noopener noreferrer">Chili Recipe</a></li>
     </ul>
 </body>
 </html>
